@@ -3,30 +3,28 @@ package de.adorsys.registry.manager.service.impl;
 import de.adorsys.registry.manager.repository.AspspRepository;
 import de.adorsys.registry.manager.repository.model.AspspPO;
 import de.adorsys.registry.manager.service.converter.AspspBOConverter;
-import de.adorsys.registry.manager.service.exception.IbanException;
 import de.adorsys.registry.manager.service.model.AspspBO;
-import org.iban4j.Iban;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
+import org.mockito.ArgumentCaptor;
+import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.runners.MockitoJUnitRunner;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
 import static org.hamcrest.CoreMatchers.is;
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertThat;
 import static org.mockito.Mockito.*;
 
 @RunWith(MockitoJUnitRunner.class)
 public class AspspServiceImplTest {
     private static final UUID ID = UUID.randomUUID();
-    private static final int PAGE = 0;
-    private static final int SIZE = 10;
-    private static final String WRONG_IBAN = "wrong iban";
-    private static final String CORRECT_IBAN = "DE89370400440532013000";
 
     @InjectMocks
     private AspspServiceImpl aspspService;
@@ -39,46 +37,13 @@ public class AspspServiceImplTest {
     private AspspPO po;
     private AspspBO bo;
 
+    @Captor
+    ArgumentCaptor<List<AspspPO>> captor;
+
     @Before
     public void setUp() throws Exception {
         po = mock(AspspPO.class);
         bo = mock(AspspBO.class);
-    }
-
-    @Test
-    public void getByAspsp() {
-        List<AspspPO> pos = List.of(po);
-        List<AspspBO> bos = List.of(bo);
-
-        when(converter.toAspspPO(bo)).thenReturn(po);
-        when(repository.findByExample(po, PAGE, SIZE)).thenReturn(pos);
-        when(converter.toAspspBOList(pos)).thenReturn(bos);
-
-        List<AspspBO> result = aspspService.getByAspsp(bo, PAGE, SIZE);
-
-        assertNotNull(result);
-        assertThat(result.size(), is(1));
-        assertEquals(bo, result.get(0));
-    }
-
-    @Test(expected = IbanException.class)
-    public void getByIban_failure_wrongIbanFormat() {
-        aspspService.getByIban(WRONG_IBAN, PAGE, SIZE);
-    }
-
-    @Test
-    public void getByIban() {
-        List<AspspPO> pos = List.of(po);
-        List<AspspBO> bos = List.of(bo);
-
-        when(repository.findByBankCode(Iban.valueOf(CORRECT_IBAN).getBankCode(), PAGE, SIZE)).thenReturn(pos);
-        when(converter.toAspspBOList(pos)).thenReturn(bos);
-
-        List<AspspBO> result = aspspService.getByIban(CORRECT_IBAN, PAGE, SIZE);
-
-        assertNotNull(result);
-        assertThat(result.size(), is(1));
-        assertEquals(bo, result.get(0));
     }
 
     @Test
@@ -98,13 +63,13 @@ public class AspspServiceImplTest {
 
     @Test
     public void saveAll() {
-        List<AspspPO> pos = List.of(po);
-        List<AspspBO> bos = List.of(bo);
+        List<AspspPO> pos = Collections.singletonList(po);
+        List<AspspBO> bos = Collections.singletonList(bo);
 
         doNothing().when(repository).saveAll(pos);
         when(converter.toAspspPOList(bos)).thenReturn(pos);
 
-        aspspService.saveAll(List.of(bo));
+        aspspService.saveAll(Collections.singletonList(bo));
 
         verify(converter, times(1)).toAspspPOList(bos);
         verify(repository, times(1)).saveAll(pos);
@@ -126,5 +91,22 @@ public class AspspServiceImplTest {
         aspspService.deleteAll();
 
         verify(repository, times(1)).deleteAll();
+    }
+
+    @Test
+    public void convertAndSaveAll() {
+        List<AspspPO> aspspPOS = Collections.singletonList(po);
+        List<AspspBO> aspspBOS = Collections.singletonList(bo);
+
+        when(converter.toAspspPOList(aspspBOS)).thenReturn(aspspPOS);
+        doNothing().when(repository).saveAll(aspspPOS);
+
+        aspspService.saveAll(aspspBOS);
+
+        verify(converter, times(1)).toAspspPOList(aspspBOS);
+        verify(repository, times(1)).saveAll(captor.capture());
+
+        assertEquals(aspspPOS.size(), captor.getValue().size());
+        assertThat(aspspPOS.get(0), is(captor.getValue().get(0)));
     }
 }
